레이아웃 및 UI 정리
레이아웃 및 UI 정리

--- a/CVS_Review/app/src/main/res/layout/activity_productspec.xml
+++ b/CVS_Review/app/src/main/res/layout/activity_productspec.xml
@@ -24,11 +24,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/maplestorybold"
-        android:textSize="20dp"
         android:text="TextView"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -50,7 +51,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mycomment_list"
         android:layout_width="413dp"
-        android:layout_height="422dp"
+        android:layout_height="405dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
